[package]
name = "wave_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.32.1"
eframe = { version = "0.32.1", default-features = false, features = ["wgpu"] }
wgpu = "25.0.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
chrono = "0.4.41"
egui_plot = "0.33.0"
tokio = { version = "1.47.1", features = ["full"] }
singlyton = "4.1.1"
strum = "0.27.2"
strum_macros = "0.27.2"
rand = "0.9.2"
